suppression des espaces dans .env.exemple

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Application Tracking Escape Game TSE
+APP_NAME=Application-Tracking-Escape-Game-TSE
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
