--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,7 +2,5 @@
   "/js/app.js": "/js/app.js",
   "/css/app.css": "/css/app.css",
   "/js/app.js.map": "/js/app.js.map",
-  "/css/app.css.map": "/css/app.css.map",
-  "/ts/app.js": "/ts/app.js",
-  "/ts/app.js.map": "/ts/app.js.map"
+  "/css/app.css.map": "/css/app.css.map"
 }
