--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "bootstrap": "^4.1.0",
     "cross-env": "^5.1",
+    "easytimer.js": "^3.1.0",
     "jquery": "^3.2",
     "jquery-ui": "^1.12.1",
     "laravel-mix": "^4.0.7",
